<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OrgRegisterMockup</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="SignInButtonText">Sign In</string>
    <string name="RegisterButtonText">Register</string>
    <string name="TitleString">Super Inventory Master</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="NewRegButtonText">Register</string>
    <string name="EmailLabelText">E-mail</string>
    <string name="PasswordLabelText">Password</string>
    <string name="title_activity_in_use">InUseActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="OrganizationLabelText">Organization Name</string>

</resources>
