<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EmailField"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignIn" >

    <Button
        android:id="@+id/SignInButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="75dp"
        android:layout_marginRight="108dp"
        android:text="@string/SignInButtonText" />

    <TextView
        android:id="@+id/PasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SignInButton2"
        android:layout_marginBottom="115dp"
        android:layout_toLeftOf="@+id/SignInButton2"
        android:text="@string/PasswordLabelText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/EmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/PasswordLabel"
        android:layout_alignParentTop="true"
        android:layout_marginTop="74dp"
        android:text="@string/EmailLabelText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/OrganizationNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/EmailLabel"
        android:layout_toRightOf="@+id/PasswordLabel"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/PasswordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/PasswordLabel"
        android:layout_alignLeft="@+id/OrganizationNameField"
        android:layout_marginLeft="28dp"
        android:ems="10"
        android:inputType="textPassword" />

</RelativeLayout>
